<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg11"
    tools:context="comsci.thanaset.myapplication.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#f11111"
        android:textSize="@dimen/h2"
        android:id="@+id/txtTitle"
        android:text="@string/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"

        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/liveTraffic"
        android:layout_below="@+id/txtTitle"
        android:layout_above="@+id/layButton"
        android:background="@color/colorAccent"
        android:layout_margin="@dimen/my_margin"
        />

    <LinearLayout
        android:id="@+id/layButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMoreInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_weight="1"
            android:onClick="onClickMoreInfo (MainActivity)"

            android:text="@string/MoreInfo" />

        <Button
            android:id="@+id/btnAboutMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aboutMe"
            android:onClick="oncick"
            />
    </LinearLayout>


</RelativeLayout>
